--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "npx nodemon src/index.js",
+    "start": "env-path -p .env.development npx nodemon src/index.js",
+    "start:dev": "env-path -p .env npx nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,6 +17,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "ejs": "^3.1.7",
+    "env-path": "^1.0.7",
     "express": "^4.18.1",
     "express-basic-auth": "^1.2.1",
     "express-session": "^1.17.2",
